--- a/src/main/resources/templates/auth/reset-password.html
+++ b/src/main/resources/templates/auth/reset-password.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" lang="vi">
   <head>
     <meta charset="UTF-8" />
@@ -113,6 +113,7 @@
             th:unless="${tokenInvalid}"
             th:action="@{/auth/reset-password}"
             method="post"
+            th:object="${passwordResetRequest}"
             class="auth-form"
             id="resetForm"
           >
@@ -121,7 +122,7 @@
               th:name="${_csrf?.parameterName}"
               th:value="${_csrf?.token}"
             />
-            <input type="hidden" name="token" th:value="${token}" />
+            <input type="hidden" th:field="*{token}" />
 
             <div class="form-group">
               <label class="form-label"
@@ -131,7 +132,7 @@
                 <i class="bx bx-lock-alt"></i>
                 <input
                   type="password"
-                  name="password"
+                  th:field="*{newPassword}"
                   id="password"
                   class="form-control"
                   placeholder="Nhập mật khẩu mới (ít nhất 6 ký tự)"
