--- a/src/main/resources/templates/error/error.html
+++ b/src/main/resources/templates/error/error.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" lang="vi">
   <head>
     <meta charset="UTF-8" />
@@ -43,11 +43,8 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background-image: radial-gradient(
-            2px 2px at 20px 30px,
-            #fff,
-            transparent
-          ),
+        background-image:
+          radial-gradient(2px 2px at 20px 30px, #fff, transparent),
           radial-gradient(
             2px 2px at 40px 70px,
             rgba(255, 255, 255, 0.8),
@@ -125,7 +122,8 @@
           rgba(139, 92, 246, 0.3),
           rgba(15, 12, 35, 0.8)
         );
-        box-shadow: inset -20px -20px 60px rgba(0, 0, 0, 0.8),
+        box-shadow:
+          inset -20px -20px 60px rgba(0, 0, 0, 0.8),
           0 0 40px rgba(139, 92, 246, 0.2);
         bottom: -100px;
         right: -50px;
