--- a/src/main/resources/templates/user/profile/overview.html
+++ b/src/main/resources/templates/user/profile/overview.html
@@ -99,14 +99,14 @@
                   <i class="bx bx-star"></i>
                   <span>Đánh giá</span>
                 </a> -->
-                <a
+                <!-- <a
                   th:href="@{/profile/notifications}"
                   class="profile-nav__item"
                   th:classappend="${profileTab == 'notifications'} ?  'active' : ''"
                 >
                   <i class="bx bx-bell"></i>
                   <span>Thông báo</span>
-                </a>
+                </a> -->
 
                 <div class="profile-nav__divider"></div>
 
@@ -118,10 +118,24 @@
                   <i class="bx bx-lock"></i>
                   <span>Đổi mật khẩu</span>
                 </a>
-                <a th:href="@{/auth/logout}" class="profile-nav__item">
-                  <i class="bx bx-log-out"></i>
-                  <span>Đăng xuất</span>
-                </a>
+                <form
+                  th:action="@{/auth/logout}"
+                  method="post"
+                  class="profile-nav__logout-form"
+                >
+                  <input
+                    type="hidden"
+                    th:name="${_csrf.parameterName}"
+                    th:value="${_csrf.token}"
+                  />
+                  <button
+                    type="submit"
+                    class="profile-nav__item profile-nav__item--button"
+                  >
+                    <i class="bx bx-log-out"></i>
+                    <span>Đăng xuất</span>
+                  </button>
+                </form>
               </nav>
             </aside>
 
