--- a/src/main/resources/templates/user/profile/edit.html
+++ b/src/main/resources/templates/user/profile/edit.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html
   xmlns:th="http://www.thymeleaf.org"
   xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
@@ -59,6 +59,7 @@
                   th:name="${_csrf.parameterName}"
                   th:value="${_csrf.token}"
                 />
+                <input type="hidden" th:field="*{avatar}" />
 
                 <!-- Avatar -->
                 <div class="card p-4 mb-4">
@@ -183,28 +184,6 @@
                         <i class="bx bx-error"></i>
                         <span th:errors="*{phone}"></span>
                       </div>
-                    </div>
-
-                    <div class="form-group">
-                      <label class="form-label">Ngày sinh</label>
-                      <input
-                        type="date"
-                        th:field="*{dateOfBirth}"
-                        class="form-control"
-                      />
-                    </div>
-
-                    <div class="form-group">
-                      <label class="form-label">Giới tính</label>
-                      <select
-                        th:field="*{gender}"
-                        class="form-control form-select"
-                      >
-                        <option value="">Chọn giới tính</option>
-                        <option value="MALE">Nam</option>
-                        <option value="FEMALE">Nữ</option>
-                        <option value="OTHER">Khác</option>
-                      </select>
                     </div>
                   </div>
                 </div>
